# gmds072

./: CMakeLists.txt  CMakePresets.json  README.md  _clang-format
FRAME/: CMakeLists.txt
FRAME/Core/: CMakeLists.txt
FRAME/Core/inc/: Tools.h
FRAME/Core/src/: Tools.cpp
FRAME/FHeDo/: CMakeLists.txt  fhedo_init_sample.ini
FRAME/FHeDo/inc/: AdvancingFrontFieldCommon.h  AdvancingFrontFieldGen3D.h  CMLSurfEvalImpl.h  CavitySurfacePaver.h  CrossFieldSmoother2D.h  EigenFieldSolverStrategy.h  FHeDo.h  FieldGenerator.h  FieldSmoother.h  FieldSolverStrategyItf.h  FrameFieldLaplacianSmoothing.h  FrameFieldSmoother.h  FunctionalApproachCross2D.h  HDMeshGenerator.h  LaplaceCross2D.h  OpenNLFieldSolverStrategy.h  Params.h  PointGenerator.h  SingularityRegionMesher.h  SmoothingHLBFGS.h  StreamlineBuilder.h  THexer.h  TetMeshManipulator.h  TriangularSurfaceManipulator.h  WhiskerWeaving.h
FRAME/FHeDo/src/: AdvancingFrontFieldCommon.cpp  AdvancingFrontFieldGen3D.cpp  CMLSurfEvalImpl.cpp  CavitySurfacePaver.cpp  CrossFieldGeneration2D.cpp  EigenFieldSolverStrategy.cpp  FHeDo.cpp  FieldGenerator.cpp  FieldSmoother.cpp  FrameFieldLaplacianSmoothing.cpp  HDMeshGenerator.cpp  LaplaceCross2D.cpp  OpenNLFieldSolverStrategy.cpp  PointGenerator.cpp  SingularityRegionMesher.cpp  SmoothingHLBFGS.cpp  StreamlineBuilder.cpp  THexer.cpp  TetMeshManipulator.cpp  TriangularSurfaceManipulator.cpp  WhiskerWeaving.cpp  main_fhedo.cpp
FRAME/Patching/: CMakeLists.txt
FRAME/Patching/inc/: Patch2D.h  PatchBuilder.h  PatchComplex2D.h  PatchEdge2D.h  PatchVertex2D.h  Patching2D.h
FRAME/Patching/src/: Patch2D.cpp  PatchBuilder.cpp  PatchComplex2D.cpp  PatchEdge2D.cpp  PatchVertex2D.cpp  Patching2D.cpp  main.cpp
FRAME/Patching/test/: CMakeLists.txt  PatchBuilderTest.h  PatchingTest.h  main.cpp
FRAME/SingGraphBuilder/: CMakeLists.txt
FRAME/SingGraphBuilder/inc/: SingularityGraph.h  SingularityGraphBuilder.h  SingularityGraphBuilder2D.h  SingularityLine.h  SingularityPatch.h  SingularityPoint.h
FRAME/SingGraphBuilder/src/: SingularityGraph.cpp  SingularityGraphBuilder.cpp  SingularityGraphBuilder2D.cpp  SingularityLine.cpp  SingularityPatch.cpp  SingularityPoint.cpp  main.cpp
FRAME/SingGraphBuilder/test/: CMakeLists.txt  SingGraphBuilder2DTest.h  main.cpp
FRAME/frameFieldGen/: CMakeLists.txt
FRAME/frameFieldGen/inc/: CrossFieldGeneration2D.h  LaplaceCross2D.h  LevelSetCross2D.h  StabilityBallCross2D.h
FRAME/frameFieldGen/src/: CrossFieldSmoother2D.cpp  FFGLauncher.cpp  FunctionalApproachCross2D.cpp  LevelSetCross2D.cpp  StabilityBallCross2D.cpp
FRAME/frameFieldGen/test/: CMakeLists.txt  FrontField2DTest.h  SmoothingField2D.h  SmoothingField2DTest.h  main.cpp
GeomInsertion/: CMakeLists.txt
GeomInsertion/inc/GMDS/: DummyClass.h  FacetedMeshIntersectionService.h  GeomMeshIntersectionService.h  LaplacianSmoothing.h  MeshGraph.h  MeshInsertDetail.h  MeshInsertDetailInOut.h  MeshModelAlgo.h  MeshSplitter.h  MeshSplitter3Refinement.h  NormalLaplacianSmoothing.h  OrderedSmartLaplacianSmoothing.h  SmartDampenedLaplacianSmoothing.h  SmartLaplacianSmoothing.h  Smoothing.h
GeomInsertion/src/: DummyClass.cpp  FacetedMeshIntersectionService.cpp  GeomMeshIntersectionService.cpp  LaplacianSmoothing.cpp  MeshGraph.cpp  MeshInsertDetail.cpp  MeshInsertDetailInOut.cpp  MeshModelAlgo.cpp  MeshSplitter.cpp  MeshSplitter3Refinement.cpp  NormalLaplacianSmoothing.cpp  OrderedSmartLaplacianSmoothing.cpp  SmartDampenedLaplacianSmoothing.cpp  SmartLaplacianSmoothing.cpp
GeomInsertion/test/: CMakeLists.txt  FacetedGeometryTest.h  GeometryInsertionMeshTrends.h  GeometryInsertionMeshTrends2.h  GeometryInsertionSheetTest.h  GeometryInsertionSplitterTest.h  GeometryInsertionSumUp.h  GeometryInsertionTest.h  main.cpp
GeomInsertion/test/Samples/: M4-M16_Disconnector.vtk  Slotted_Angle_Plate.vtk  cas0.vtk  cas0.vtp  cas1.vtp  cas10.vtk  cas10.vtp  cas11.vtk  cas11.vtp  cas12.vtk  cas12.vtp  cas2.vtk  cas2.vtp  cas3.vtk  cas3.vtp  cas4.vtk  cas4.vtp  cas5.vtk  cas5.vtp  cas6.vtk  cas6.vtp  cas7.vtk  cas7.vtp  cas8.vtk  cas8.vtp  easy1.vtp  easy2.vtk  easy2.vtp  ex1.vtk  medium2.vtp  pyramid.vtk
MesquiteInterface/: CMakeLists.txt
MesquiteInterface/inc/GMDS/: DummyClassMesquiteInterface.h  MesquiteCaller.h  MesquiteDomainImplAdapter.h  MesquiteMeshImplAdapter.h  MesquiteMeshImplAdapterSurf.h
MesquiteInterface/src/: DummyClassMesquiteInterface.cpp  MesquiteCaller.cpp  MesquiteDomainImplAdapter.cpp  MesquiteMeshImplAdapter.cpp  MesquiteMeshImplAdapterSurf.cpp
MesquiteInterface/test/: CMakeLists.txt  MesquiteInterfaceSmallTest.h  MesquiteInterfaceTest.h  main.cpp
SubMapping/: CMakeLists.txt
SubMapping/src/: DummyClassSubMapping.cpp  SubMapping.cpp
SubMapping/test/: CMakeLists.txt  SubMappingTestSuite.h  main.cpp
gmds/: .swp  CMakeLists.txt  gmdsConfig.cmake.in
gmds/pkg/: GMDSConfig.cmake  GMDSConfig.cmake.in
gmds/src/Algo/: BoundaryOperator.cpp  DistanceFieldBuilder2D.cpp  DistanceFieldBuilder3D.cpp  GETMe.cpp  Pillowing.cpp  SheetOperator.cpp  SubMeshExtractor.cpp
gmds/src/CAD/: FACFacetedGeomReadAndWrite.cpp  FacetedCurve.cpp  FacetedGeomManager.cpp  FacetedPoint.cpp  FacetedSurface.cpp  FacetedTriangulationService.cpp  FacetedVolume.cpp  GeomCurve.cpp  GeomPoint.cpp  GeomSurface.cpp
gmds/src/IG/: Cell.cpp  CellGroupImpl.cpp  Edge.cpp  EdgeContainer.cpp  Face.cpp  FaceContainer.cpp  IGMesh.cpp  IGMeshDoctor.cpp  IGMeshQualityEvaluation.cpp  Node.cpp  NodeContainer.cpp  Region.cpp  RegionContainer.cpp
gmds/test/: AdjacencyTest.h  BooleanMarkTest.h  CMakeLists.txt  CellCreationTest.h  ChartTest.h  Cross2DTest.h  CrossTest.h  FacetedModelTest.h  GETMeTest.h  GroupTest.h  HexahedronTest.h  IGMeshDoctorTest.h  MathTest.h  MeshVariableTest.h  ModelChangeTest.h  PillowingTest.h  QualityTest.h  QuaternionTest.h  ReaderTest.h  SerializationTest.h  SheetOperatorTest.h  VariableTest.h  WriterTest.h  main.cpp
gmdsVtk/: CMakeLists.txt
gmdsVtk/src/: IGMeshVTKWriterImpl.cpp  VTKFacetedGeomReadAndWrite.cpp
gmdsVtk/test/: CMakeLists.txt  FacetedGeometryLoadTest.h  WriterTest.h  main.cpp
test_link/: main.cpp  (+1 more)
(+191 files in other folders)
